--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,8 @@
     <LinearLayout
         android:layout_marginTop="60dp"
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="385sp"
+        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content">
 
         <TextView
