--- a/app/src/main/res/layout/activity_man_hinh_chao.xml
+++ b/app/src/main/res/layout/activity_man_hinh_chao.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Laptop"
+        android:text="Welcome to LapMarket"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:textSize="30dp"
