--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Re">
+    tools:context=".Register_Activity">
 
     <ImageView
         android:layout_marginTop="20dp"
@@ -14,58 +14,61 @@
         android:src="@drawable/img"/>
 
     <LinearLayout
+        android:layout_width="385dp"
+        android:layout_height="235dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="60dp"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Email:"
-            android:textSize="15dp"/>
+            android:textSize="15dp" />
+
         <EditText
             android:id="@+id/edt_email_dk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#DAD6D6"
             android:hint="Nhập email "
             android:padding="10dp"
-            android:background="#DAD6D6"
-            android:textSize="15dp"/>
+            android:textSize="15dp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Pass:"
-            android:textSize="15dp"/>
+            android:textSize="15dp" />
+
         <EditText
             android:id="@+id/edt_pass_dk"
             android:layout_width="match_parent"
-            android:inputType="textPassword"
-            android:padding="10dp"
+            android:layout_height="wrap_content"
             android:background="#DAD6D6"
             android:hint="Nhập mật khẩu"
-            android:layout_height="wrap_content"
-            android:textSize="15dp"/>
-
-
+            android:inputType="textPassword"
+            android:padding="10dp"
+            android:textSize="15dp" />
 
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_res_dk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Register"
-            android:textSize="23dp"
             android:layout_marginTop="30dp"
+            android:background="#E88364"
+            android:text="Register"
             android:textColor="@color/white"
-            android:background="#E88364"/>
+            android:textSize="23dp" />
+
         <TextView
             android:id="@+id/txt_quenmatkhau"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:text="@string/quenmk"/>
+            android:text="@string/quenmk" />
 
 
     </LinearLayout>
