--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -11,8 +11,8 @@
         android:title="Danh Mục Sản Phẩm">
         <menu>
             <item
-                android:id="@+id/lapGaming_doHoa"
-                android:title="Laptop Gaming, Đồ Họa"
+                android:id="@+id/khachhang"
+                android:title="Quản Lý Khách Hàng"
                 android:icon="@drawable/game"/>
             <item
                 android:id="@+id/lapVanPhong_macbook"
