--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,38 +8,43 @@
     tools:context=".Register_Activity">
 
     <ImageView
-        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="350px"
-        android:src="@drawable/img"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/img" />
 
     <LinearLayout
-        android:layout_width="385dp"
-        android:layout_height="235dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="60dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Email:"
-            android:textSize="15dp" />
+            android:textSize="15sp"
+            android:layout_marginBottom="8dp" />
 
         <EditText
             android:id="@+id/edt_email_dk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#DAD6D6"
-            android:hint="Nhập email "
+            android:hint="Nhập email"
             android:padding="10dp"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Pass:"
-            android:textSize="15dp" />
+            android:textSize="15sp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp" />
 
         <EditText
             android:id="@+id/edt_pass_dk"
@@ -49,28 +54,44 @@
             android:hint="Nhập mật khẩu"
             android:inputType="textPassword"
             android:padding="10dp"
-            android:textSize="15dp" />
-
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_res_dk"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:background="#E88364"
-            android:text="Register"
-            android:textColor="@color/white"
-            android:textSize="23dp" />
+            android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/txt_quenmatkhau"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:text="@string/quenmk" />
+            android:text="Vai trò (admin/user):"
+            android:textSize="15sp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp" />
 
-
+        <EditText
+            android:id="@+id/edt_loatk_dk"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#DAD6D6"
+            android:hint="Nhập vai trò"
+            android:padding="10dp"
+            android:textSize="15sp" />
     </LinearLayout>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_res_dk"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:background="#E88364"
+        android:text="Register"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:padding="12dp" />
+
+    <TextView
+        android:id="@+id/txt_quenmatkhau"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="Quên mật khẩu?"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textStyle="bold" />
 </LinearLayout>
