--- a/app/src/main/res/layout/fragment_q_l_lap_top.xml
+++ b/app/src/main/res/layout/fragment_q_l_lap_top.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".KhachHangActivity"
-    android:orientation="vertical">
+    tools:context=".frag.QLLapTopFragmen">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycle_khachang"
+        android:id="@+id/recycle_laptop"
         android:layout_width="match_parent"
         android:layout_marginTop="70dp"
         android:layout_height="match_parent"/>
@@ -23,5 +20,4 @@
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="15dp"/>
 
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</FrameLayout>
